fixed heading size on mobile

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -14,7 +14,7 @@ body {
         letter-spacing: 0.75rem;
     }
     @include respond(phone) {
-        font-size: 4rem;
+        font-size: 2.5rem;
     }
 }
 .heading-secondary {
